termino add obs

--- a/ProvaCandidato.Web/ProvaCandidato.Web.csproj
+++ b/ProvaCandidato.Web/ProvaCandidato.Web.csproj
@@ -170,6 +170,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CidadeController.cs" />
+    <Compile Include="Controllers\ClienteObservacaoController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\GenericController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -187,6 +188,7 @@
     <Content Include="Assets\Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Assets\Scripts\bootstrap.js" />
     <Content Include="Assets\Scripts\bootstrap.min.js" />
+    <Content Include="Assets\Scripts\cliente.js" />
     <Content Include="Assets\Scripts\geral.js" />
     <None Include="Assets\Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Assets\Scripts\jquery-1.10.2.js" />
@@ -287,7 +289,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Clientes\Visualizar.cshtml" />
     <Content Include="Views\Clientes\Editar.cshtml" />
     <Content Include="Views\Clientes\Criar.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
@@ -303,12 +304,18 @@
     <Content Include="Views\Clientes\Details.cshtml" />
     <Content Include="Views\Clientes\Edit.cshtml" />
     <Content Include="Views\Cidades\Criar.cshtml" />
+    <Content Include="Views\ClienteObservacao\_AddObsUser.cshtml" />
+    <Content Include="Views\Teste\Index.cshtml" />
+    <Content Include="Views\Clientes\Visualisar.cshtml" />
+    <Content Include="Views\Teste\Create.cshtml" />
+    <Content Include="Views\Teste\Delete.cshtml" />
+    <Content Include="Views\Teste\Details.cshtml" />
+    <Content Include="Views\Teste\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Generic\" />
-    <Folder Include="Views\Teste\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
